--- a/Term.cabal
+++ b/Term.cabal
@@ -26,5 +26,5 @@ executable Term
                      , singletons
                      , mtl
                      , containers
-  -- hs-source-dirs:
+  hs-source-dirs: src
   default-language:    Haskell2010
