--- a/TT.cabal
+++ b/TT.cabal
@@ -21,8 +21,10 @@ executable TT
   build-depends:       base >=4.7 && <4.8
                      , bound >=1.0 && <1.1
                      , prelude-extras
-                     , singletons
                      , mtl
                      , containers
+                     , parsers==0.10.3
+                     , trifecta==1.4.2
+                     , unordered-containers==0.2.4.0
   hs-source-dirs: src
   default-language:    Haskell2010
