--- a/TT.cabal
+++ b/TT.cabal
@@ -26,5 +26,7 @@ executable TT
                      , parsers==0.10.3
                      , trifecta==1.4.2
                      , unordered-containers==0.2.4.0
+                     , pretty==1.1.1.1
+                     , haskeline==0.7.1.2
   hs-source-dirs: src
   default-language:    Haskell2010
