--- a/TT.cabal
+++ b/TT.cabal
@@ -18,15 +18,15 @@ executable TT
   ghc-options:         -fwarn-incomplete-patterns
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.7 && <4.8
-                     , bound >=1.0 && <1.1
+  build-depends:       base
+                     , bound
                      , prelude-extras
                      , mtl
                      , containers
-                     , parsers==0.10.3
-                     , trifecta==1.4.2
-                     , unordered-containers==0.2.4.0
-                     , pretty==1.1.1.1
-                     , haskeline==0.7.1.2
+                     , parsers
+                     , trifecta
+                     , unordered-containers
+                     , pretty
+                     , haskeline
   hs-source-dirs: src
   default-language:    Haskell2010
