--- a/TT.cabal
+++ b/TT.cabal
@@ -29,5 +29,10 @@ executable TT
                      , pretty
                      , haskeline
                      , digits
+                     , optparse-applicative
+                     , singletons
+                     , vinyl
+                     , nats
+                     , lens
   hs-source-dirs: src
   default-language:    Haskell2010
