--- a/cabal.config
+++ b/cabal.config
@@ -4,7 +4,7 @@ constraints: QuickCheck ==2.7.5,
              ansi-terminal ==0.6.1.1,
              ansi-wl-pprint ==0.6.7.1,
              array ==0.5.0.0,
-             attoparsec ==0.12.0.0,
+             attoparsec ==0.12.1.0,
              base ==4.7.0.0,
              bifunctors ==4.1.1.1,
              binary ==0.7.1.0,
@@ -12,7 +12,7 @@ constraints: QuickCheck ==2.7.5,
              blaze-html ==0.7.0.2,
              blaze-markup ==0.6.1.0,
              bound ==1.0.3,
-             bytes ==0.14.0.1,
+             bytes ==0.14.0.2,
              bytestring ==0.10.4.0,
              cereal ==0.4.0.1,
              charset ==0.3.7,
@@ -33,13 +33,14 @@ constraints: QuickCheck ==2.7.5,
              ghc-prim ==0.3.1.0,
              hashable ==1.2.2.0,
              hashable-extras ==0.2.0.1,
-             haskeline ==0.7.1.2,
+             haskeline ==0.7.1.3,
              integer-gmp ==0.5.1.0,
              keys ==3.10.1,
              lens ==4.2,
              mtl ==2.1.3.1,
              nats ==0.2,
              old-locale ==1.0.0.6,
+             optparse-applicative ==0.9.0,
              parallel ==3.2.0.4,
              parsec ==3.1.5,
              parsers ==0.10.3,
@@ -47,6 +48,7 @@ constraints: QuickCheck ==2.7.5,
              prelude-extras ==0.4,
              pretty ==1.1.1.1,
              primitive ==0.5.3.0,
+             process ==1.2.0.0,
              profunctors ==4.0.4,
              random ==1.0.1.1,
              reducers ==3.10.2.1,
@@ -55,21 +57,25 @@ constraints: QuickCheck ==2.7.5,
              scientific ==0.3.2.1,
              semigroupoids ==4.0.2.1,
              semigroups ==0.15,
+             singletons ==1.0,
              split ==0.2.2,
              stm ==2.4.3,
-             syb ==0.4.1,
+             syb ==0.4.2,
              tagged ==0.7.2,
              template-haskell ==2.9.0.0,
              terminfo ==0.4.0.0,
              text ==1.1.1.3,
              tf-random ==0.5,
+             th-desugar ==1.4.0,
              time ==1.4.2,
              transformers ==0.3.0.0,
-             transformers-compat ==0.3.3.4,
+             transformers-compat ==0.3.3.3,
              trifecta ==1.4.2,
              unix ==2.7.0.1,
              unordered-containers ==0.2.4.0,
              utf8-string ==0.3.8,
-             vector ==0.10.10.0,
+             vector ==0.10.11.0,
+             vinyl ==0.4.2,
              void ==0.6.1,
              zlib ==0.5.4.1
+
