--- a/TT.cabal
+++ b/TT.cabal
@@ -28,5 +28,6 @@ executable TT
                      , unordered-containers
                      , pretty
                      , haskeline
+                     , digits
   hs-source-dirs: src
   default-language:    Haskell2010
