--- a/TT.cabal
+++ b/TT.cabal
@@ -25,6 +25,7 @@ executable TT
                      , containers
                      , parsers
                      , trifecta
+                     , ansi-wl-pprint
                      , unordered-containers
                      , pretty
                      , haskeline
