--- a/cabal.config
+++ b/cabal.config
@@ -1,11 +1,11 @@
-constraints: QuickCheck ==2.7.5,
+constraints: QuickCheck ==2.7.6,
              TT ==0.1.0.0,
-             aeson ==0.7.0.6,
+             aeson ==0.8.0.0,
              ansi-terminal ==0.6.1.1,
              ansi-wl-pprint ==0.6.7.1,
              array ==0.5.0.0,
              attoparsec ==0.12.1.0,
-             base ==4.7.0.0,
+             base >=4.7.0.0,
              bifunctors ==4.1.1.1,
              binary ==0.7.1.0,
              blaze-builder ==0.3.3.2,
@@ -24,7 +24,7 @@ constraints: QuickCheck ==2.7.5,
              digits ==0.2,
              directory ==1.2.1.0,
              distributive ==0.4.4,
-             dlist ==0.7.0.1,
+             dlist ==0.7.1,
              exceptions ==0.6.1,
              filepath ==1.3.0.2,
              fingertree ==0.1.0.0,
@@ -33,17 +33,17 @@ constraints: QuickCheck ==2.7.5,
              ghc-prim ==0.3.1.0,
              hashable ==1.2.2.0,
              hashable-extras ==0.2.0.1,
-             haskeline ==0.7.1.3,
+             haskeline ==0.7.1.2,
              integer-gmp ==0.5.1.0,
              keys ==3.10.1,
-             lens ==4.2,
+             lens ==4.3.1,
              mtl ==2.1.3.1,
              nats ==0.2,
              old-locale ==1.0.0.6,
              optparse-applicative ==0.9.0,
              parallel ==3.2.0.4,
              parsec ==3.1.5,
-             parsers ==0.10.3,
+             parsers ==0.12.1,
              pointed ==4.1,
              prelude-extras ==0.4,
              pretty ==1.1.1.1,
@@ -52,11 +52,11 @@ constraints: QuickCheck ==2.7.5,
              profunctors ==4.0.4,
              random ==1.0.1.1,
              reducers ==3.10.2.1,
-             reflection ==1.4,
+             reflection ==1.5.1,
              rts ==1.0,
-             scientific ==0.3.2.1,
+             scientific ==0.3.3.0,
              semigroupoids ==4.0.2.1,
-             semigroups ==0.15,
+             semigroups ==0.15.1,
              singletons ==1.0,
              split ==0.2.2,
              stm ==2.4.3,
@@ -66,16 +66,15 @@ constraints: QuickCheck ==2.7.5,
              terminfo ==0.4.0.0,
              text ==1.1.1.3,
              tf-random ==0.5,
-             th-desugar ==1.4.0,
+             th-desugar ==1.4.2,
              time ==1.4.2,
              transformers ==0.3.0.0,
              transformers-compat ==0.3.3.3,
-             trifecta ==1.4.2,
+             trifecta ==1.5.1,
              unix ==2.7.0.1,
-             unordered-containers ==0.2.4.0,
+             unordered-containers ==0.2.5.0,
              utf8-string ==0.3.8,
              vector ==0.10.11.0,
              vinyl ==0.4.2,
              void ==0.6.1,
              zlib ==0.5.4.1
-
